--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server",
-    "watch": "webpack --progress --colors --watch",
+    "watch": "cross-env NODE_ENV=production webpack --progress --colors",
     "build": "node build.js"
   },
   "keywords": [],
@@ -54,7 +54,12 @@
     "three": "^0.90.0",
     "tween": "^0.9.0",
     "webpack-dev-middleware": "^1.12.0",
-    "webpack-hot-middleware": "^2.20.0"
+    "webpack-hot-middleware": "^2.20.0",
+    "postcss": "^6.0.13",
+    "postcss-cssnext": "^3.0.2",
+    "postcss-import": "^11.0.0",
+    "postcss-loader": "^2.0.8",
+    "autoprefixer": "^7.1.6"
   },
   "author": ""
 }
