--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server",
-    "watch": "cross-env NODE_ENV=production webpack --progress --colors",
-    "build": "node build.js"
+    "build": "cross-env NODE_ENV=production webpack --progress --colors"
   },
   "keywords": [],
   "license": "ISC",
