--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "webpack": "^2.4.1"
   },
   "devDependencies": {
+    "autoprefixer": "^7.1.6",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-env": "^1.6.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-es2016": "^6.24.1",
@@ -50,15 +52,14 @@
     "html-webpack-plugin": "^2.30.1",
     "http-proxy-middleware": "^0.17.4",
     "iscroll": "^5.2.0",
-    "three": "^0.90.0",
-    "tween": "^0.9.0",
-    "webpack-dev-middleware": "^1.12.0",
-    "webpack-hot-middleware": "^2.20.0",
     "postcss": "^6.0.13",
     "postcss-cssnext": "^3.0.2",
     "postcss-import": "^11.0.0",
     "postcss-loader": "^2.0.8",
-    "autoprefixer": "^7.1.6"
+    "three": "^0.90.0",
+    "tween": "^0.9.0",
+    "webpack-dev-middleware": "^1.12.0",
+    "webpack-hot-middleware": "^2.20.0"
   },
   "author": ""
 }
